--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&family=Quicksand:wght@300;400;700&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Public Sans', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-size: 16px;
+  font-weight: 300;
+  background-color: rgb(235, 227, 235);
 }
+
+.App {
+  text-align: center;
+}
+
+.App h1 {
+  font-size: 3rem;
+  color: lightblue;
+  margin-top: 20px;
+}
+
+
+/* todolist */
+.todo-lists {
+  margin: 20px auto;
+  max-width: 800px;
+  min-height: 400px;
+  border: 10px solid rgb(240, 167, 240);
+  border-radius: 20px;
+  padding: 20px;
+}
+
+
+/* inputusers */
+.input-users {
+  width: 40%;
+  text-align: left;
+  margin: auto;
+}
+
+.input-users h2 {
+  font-size: 1.3rem;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+.input-users input {
+  width: 100%;
+  padding: 10px 0 10px;
+  background: transparent;
+  outline: none;
+  border-bottom: 1px solid ;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+}
+
+.input-users button {
+  display: block;
+  margin: auto;
+  padding: 3px 20px 3px;
+  background-color: lightblue;
+  font-weight: 400;
+  outline: none;
+  border: none;
+  margin-top: 10px;
+  border-radius: 3px;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, .3);
+  cursor: pointer;
+  font-style: italic;
+  color: #fff;
+}
+
+.input-users button:hover {
+  background-color: rgb(126, 183, 202);
+}
+
+
+/* itemList
+.list-item {
+  width: 40%;
+  padding: 30px 0 30px;
+  list-style: none;
+  margin: auto;
+}
+
+.list-item li{
+  text-align: left;
+} */
