--- a/src/index.css
+++ b/src/index.css
@@ -80,14 +80,39 @@ body {
 }
 
 
-/* itemList
+/* itemList */
 .list-item {
   width: 40%;
-  padding: 30px 0 30px;
+  padding: 15px 0 30px;
   list-style: none;
   margin: auto;
 }
 
 .list-item li{
   text-align: left;
-} */
+  margin-top: 15px;
+  position: relative;
+  line-height: 30px;
+  font-size: 1.3rem;
+  background-color: rgb(235, 207, 235);
+  padding: 5px 20px;
+  border-radius: 5px;
+}
+
+.list-item li button{
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0 10px;
+  border-radius: 0 5px 5px 0;
+  background-color: lightblue;
+  color: #fff;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+.list-item li button:hover {
+  background-color: rgb(126, 183, 202);
+}
